# hegai-bot

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  setup.sh
.circleci/: config.yml
initial_data_formation/: README.md  data_formation.py  meetings.csv  meetings_data_formation.py  parse_notion.py  parse_tags_notion.py  region_data_formation.py  users.csv
paches/: data_formation.py  meetings_data_formation.py  new_users.csv  parse_notion.py  parse_notion_update.py  parse_tags_notion.py  region_data_formation.py
src/: run.py
src/bot/: conv_handlers.py  set_commands.py  states.py
src/bot/admins/: __init__.py  app_admins.py
src/bot/data/: __init__.py  data.py  texts.json
src/bot/db_functions/: __init__.py  _admin.py  _registration.py  _utils.py
src/bot/handlers/: __init__.py  handlers.py  tags_chooser.py
src/bot/handlers/account/: __init__.py  account.py  registration.py  users_dict.py  utils.py
src/bot/handlers/admin/: __init__.py  admin.py  manual_match.py  push_handlers.py  push_message.py
src/bot/handlers/broadcast/: __init__.py  broadcast.py  push_status.py
src/bot/handlers/conversation/: __init__.py  contacts.py  conversation.py  feedback.py
src/bot/handlers/notion_parse/: __init__.py  parse_notion_tags_groups.py  parse_notion_update.py  (+2 more)
src/bot/hegai_db/: __init__.py  alembic.ini
src/bot/utils/: __init__.py  cached.py  decorators.py  helpers.py  templates.py  wraps.py
src/settings/: __init__.py  base.py  development.py  local.py
templates/: push_status.txt  statistics.txt
(+12 files in other folders)
